test/asm/label-macro-arg.simple.err
ERROR: label-macro-arg.asm(38) -> label-macro-arg.asm::test_char(25):
    Local label 'sizeof_.something' in main scope
while expanding symbol "VAR_DEF"
ERROR: label-macro-arg.asm(38) -> label-macro-arg.asm::test_char(25):
    syntax error
while expanding symbol "VAR_DEF"
error: Assembly aborted (2 errors)!
